--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SimulateSMS</string>
+    <string name="app_name">模拟短信</string>
     <string name="dialog_text">会话</string>
     <string name="group_text">分组</string>
     <string name="search_text">搜索</string>
